Atualização translations/texts/items/armors/biome/alpine/alpaca/alpacavillager/alpacavillager.head.json

--- a/translations/texts/items/armors/biome/alpine/alpaca/alpacavillager/alpacavillager.head.json
+++ b/translations/texts/items/armors/biome/alpine/alpaca/alpacavillager/alpacavillager.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Alien Alpaca Real Head"
+      "Eng": "Alien Alpaca Real Head",
+      "Por": "Cabeça de Alpaca Alienígena Real"
     }
   }
 ]
