Atualização translations/texts/items/armors/biome/alpine/alpaca/alpacavillager/alpacavillager.legs.json

--- a/translations/texts/items/armors/biome/alpine/alpaca/alpacavillager/alpacavillager.legs.json
+++ b/translations/texts/items/armors/biome/alpine/alpaca/alpacavillager/alpacavillager.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Alien Alpaca Real Legs"
+      "Eng": "Alien Alpaca Real Legs",
+      "Por": "Pernas de Alpaca Alienígena Real"
     }
   }
 ]
