--- a/translations/texts/items/armors/biome/bone/skullapex/skullapex.head.json
+++ b/translations/texts/items/armors/biome/bone/skullapex/skullapex.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Apex Skull Mask"
+      "Eng": "Apex Skull Mask",
+      "Por": "Máscara de Crânio Apex"
     }
   }
 ]
