--- a/translations/texts/items/armors/biome/bone/skullavian/skullavian.head.json
+++ b/translations/texts/items/armors/biome/bone/skullavian/skullavian.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Avian Skull Mask"
+      "Eng": "Avian Skull Mask",
+      "Por": "Máscara de Crânio Avian"
     }
   }
 ]
