Atualização translations/texts/items/armors/biome/bone/skullfloran/skullfloran.head.json

--- a/translations/texts/items/armors/biome/bone/skullfloran/skullfloran.head.json
+++ b/translations/texts/items/armors/biome/bone/skullfloran/skullfloran.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Floran Skull Mask"
+      "Eng": "Floran Skull Mask",
+      "Por": "Máscara de Crânio Floran"
     }
   }
 ]
