Atualização translations/texts/items/armors/biome/bone/skullglitch/skullglitch.head.json

--- a/translations/texts/items/armors/biome/bone/skullglitch/skullglitch.head.json
+++ b/translations/texts/items/armors/biome/bone/skullglitch/skullglitch.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Glitch Skull Mask"
+      "Eng": "Glitch Skull Mask",
+      "Por": "Máscara de Crânio Glitch"
     }
   }
 ]
