--- a/translations/texts/items/armors/biome/bone/skullhuman/skullhuman.head.json
+++ b/translations/texts/items/armors/biome/bone/skullhuman/skullhuman.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Human Skull Mask"
+      "Eng": "Human Skull Mask",
+      "Por": "Máscara de Crânio Humano"
     }
   }
 ]
