Atualização translations/texts/items/armors/biome/bone/skullhylotl/skullhylotl.head.json

--- a/translations/texts/items/armors/biome/bone/skullhylotl/skullhylotl.head.json
+++ b/translations/texts/items/armors/biome/bone/skullhylotl/skullhylotl.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hylotl Skull Mask"
+      "Eng": "Hylotl Skull Mask",
+      "Por": "Máscara de Crânio Hylotl"
     }
   }
 ]
