--- a/translations/texts/items/armors/biome/colorful/crayonblueback/crayonblueback.back.json
+++ b/translations/texts/items/armors/biome/colorful/crayonblueback/crayonblueback.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Blue Crayon"
+      "Eng": "Blue Crayon",
+      "Por": "Giz de Cera Azul"
     }
   }
 ]
