Atualização translations/texts/items/armors/biome/colorful/crayongreenback/crayongreen.back.json

--- a/translations/texts/items/armors/biome/colorful/crayongreenback/crayongreen.back.json
+++ b/translations/texts/items/armors/biome/colorful/crayongreenback/crayongreen.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Green Crayon"
+      "Eng": "Green Crayon",
+      "Por": "Giz de Cera Verde"
     }
   }
 ]
