--- a/translations/texts/items/armors/biome/colorful/crayonorangeback/crayonorange.back.json
+++ b/translations/texts/items/armors/biome/colorful/crayonorangeback/crayonorange.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Orange Crayon"
+      "Eng": "Orange Crayon",
+      "Por": "Giz de Cera Laranja"
     }
   }
 ]
