--- a/translations/texts/items/armors/biome/colorful/crayonpurpleback/crayonpurpleback.back.json
+++ b/translations/texts/items/armors/biome/colorful/crayonpurpleback/crayonpurpleback.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Purple Crayon"
+      "Eng": "Purple Crayon",
+      "Por": "Giz de Cera Roxo"
     }
   }
 ]
