--- a/translations/texts/items/armors/biome/colorful/crayonredback/crayonredback.back.json
+++ b/translations/texts/items/armors/biome/colorful/crayonredback/crayonredback.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Red Crayon"
+      "Eng": "Red Crayon",
+      "Por": "Giz de Cera Vermelho"
     }
   }
 ]
