--- a/translations/texts/items/armors/biome/colorful/crayonyellowback/crayonyellowback.back.json
+++ b/translations/texts/items/armors/biome/colorful/crayonyellowback/crayonyellowback.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Yellow Crayon"
+      "Eng": "Yellow Crayon",
+      "Por": "Giz de Cera Amarelo"
     }
   }
 ]
