--- a/translations/texts/items/armors/biome/copperarmor/copperarmor.chest.json
+++ b/translations/texts/items/armors/biome/copperarmor/copperarmor.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Copper Chestpiece"
+      "Eng": "Copper Chestpiece",
+      "Por": "Peitoral de Cobre"
     }
   }
 ]
