--- a/translations/texts/items/armors/biome/copperarmor/copperarmor.head.json
+++ b/translations/texts/items/armors/biome/copperarmor/copperarmor.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Copper Goggles"
+      "Eng": "Copper Goggles",
+      "Por": "Óculos de Cobre"
     }
   }
 ]
