--- a/translations/texts/items/armors/biome/copperarmor/copperarmor.legs.json
+++ b/translations/texts/items/armors/biome/copperarmor/copperarmor.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Copper Greaves"
+      "Eng": "Copper Greaves",
+      "Por": "Grevas de Cobre"
     }
   }
 ]
