--- a/translations/texts/items/armors/biome/eyepatch/eyeball/eyeball.back.json
+++ b/translations/texts/items/armors/biome/eyepatch/eyeball/eyeball.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Optic Nerve"
+      "Eng": "Optic Nerve",
+      "Por": "Nervo Óptico"
     }
   }
 ]
