Atualização translations/texts/items/armors/biome/eyepatch/eyeball/eyeball.chest.json

--- a/translations/texts/items/armors/biome/eyepatch/eyeball/eyeball.chest.json
+++ b/translations/texts/items/armors/biome/eyepatch/eyeball/eyeball.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Eyeball Shirt"
+      "Eng": "Eyeball Shirt",
+      "Por": "Camisa de Globo Ocular"
     }
   }
 ]
