--- a/translations/texts/items/armors/biome/eyepatch/eyeball/eyeball.head.json
+++ b/translations/texts/items/armors/biome/eyepatch/eyeball/eyeball.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Eyeball Mask"
+      "Eng": "Eyeball Mask",
+      "Por": "Máscara de Globo Ocular"
     }
   }
 ]
