--- a/translations/texts/items/armors/biome/eyepatch/eyeball/eyeball.legs.json
+++ b/translations/texts/items/armors/biome/eyepatch/eyeball/eyeball.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Eyeball Skirt"
+      "Eng": "Eyeball Skirt",
+      "Por": "Saia de Globo Ocular"
     }
   }
 ]
