Atualização translations/texts/items/armors/biome/flesh/anatomyapex/anatomyapex.head.json

--- a/translations/texts/items/armors/biome/flesh/anatomyapex/anatomyapex.head.json
+++ b/translations/texts/items/armors/biome/flesh/anatomyapex/anatomyapex.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Apex Anatomy Mask"
+      "Eng": "Apex Anatomy Mask",
+      "Por": "Máscara de Anatomia Apex"
     }
   }
 ]
