--- a/translations/texts/items/armors/biome/flesh/anatomyavian/anatomyavian.head.json
+++ b/translations/texts/items/armors/biome/flesh/anatomyavian/anatomyavian.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Avian Anatomy Mask"
+      "Eng": "Avian Anatomy Mask",
+      "Por": "Máscara de Anatomia Avian"
     }
   }
 ]
