--- a/translations/texts/items/armors/biome/flesh/anatomyavian/anatomyavian.legs.json
+++ b/translations/texts/items/armors/biome/flesh/anatomyavian/anatomyavian.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Avian Anatomy Trousers"
+      "Eng": "Avian Anatomy Trousers",
+      "Por": "Calças de Anatomia Avian"
     }
   }
 ]
