Atualização translations/texts/items/armors/biome/flesh/anatomyhuman/anatomy.chest.json

--- a/translations/texts/items/armors/biome/flesh/anatomyhuman/anatomy.chest.json
+++ b/translations/texts/items/armors/biome/flesh/anatomyhuman/anatomy.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Anatomy Shirt"
+      "Eng": "Anatomy Shirt",
+      "Por": "Camisa de Anatomia"
     }
   }
 ]
