--- a/translations/texts/items/armors/biome/flesh/anatomyhuman/anatomy.head.json
+++ b/translations/texts/items/armors/biome/flesh/anatomyhuman/anatomy.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Human Anatomy Mask"
+      "Eng": "Human Anatomy Mask",
+      "Por": "Máscara de Anatomia Humana"
     }
   }
 ]
