Atualização translations/texts/items/armors/biome/flesh/anatomyhuman/anatomy.legs.json

--- a/translations/texts/items/armors/biome/flesh/anatomyhuman/anatomy.legs.json
+++ b/translations/texts/items/armors/biome/flesh/anatomyhuman/anatomy.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Human Anatomy Trousers"
+      "Eng": "Human Anatomy Trousers",
+      "Por": "Calças de Anatomia Humana"
     }
   }
 ]
