--- a/translations/texts/items/armors/biome/flesh/anatomyhylotl/anatomyhylotl.head.json
+++ b/translations/texts/items/armors/biome/flesh/anatomyhylotl/anatomyhylotl.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hylotl Anatomy Mask"
+      "Eng": "Hylotl Anatomy Mask",
+      "Por": "Máscara de Anatomia Hylotl"
     }
   }
 ]
