Atualização translations/texts/items/armors/biome/foundry/foundryback/foundryback.back.json

--- a/translations/texts/items/armors/biome/foundry/foundryback/foundryback.back.json
+++ b/translations/texts/items/armors/biome/foundry/foundryback/foundryback.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Foundry Gear Pack"
+      "Eng": "Foundry Gear Pack",
+      "Por": "Pacote de Equipamento de Fundição"
     }
   }
 ]
