--- a/translations/texts/items/armors/biome/foundry/foundrychest/foundrychest.chest.json
+++ b/translations/texts/items/armors/biome/foundry/foundrychest/foundrychest.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Foundry Chestpiece"
+      "Eng": "Foundry Chestpiece",
+      "Por": "Peitoral de Fundição"
     }
   }
 ]
