--- a/translations/texts/items/armors/biome/foundry/foundryforeman/foundryforeman.back.json
+++ b/translations/texts/items/armors/biome/foundry/foundryforeman/foundryforeman.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Foundry Foreman Pack"
+      "Eng": "Foundry Foreman Pack",
+      "Por": "Pacote de Capataz de Fundição"
     }
   }
 ]
