--- a/translations/texts/items/armors/biome/foundry/foundrygoggles/foundrygoggles.head.json
+++ b/translations/texts/items/armors/biome/foundry/foundrygoggles/foundrygoggles.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Foundry Goggles"
+      "Eng": "Foundry Goggles",
+      "Por": "Óculos de Fundição"
     }
   }
 ]
