Atualização translations/texts/items/armors/biome/foundry/foundryguardchest/foundryguardchest.chest.json

--- a/translations/texts/items/armors/biome/foundry/foundryguardchest/foundryguardchest.chest.json
+++ b/translations/texts/items/armors/biome/foundry/foundryguardchest/foundryguardchest.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Foundry Guard Gloves"
+      "Eng": "Foundry Guard Gloves",
+      "Por": "Luvas de Guarda de Fundição"
     }
   }
 ]
