Atualização translations/texts/items/armors/biome/foundry/foundryhardhat/foundryhardhat.head.json

--- a/translations/texts/items/armors/biome/foundry/foundryhardhat/foundryhardhat.head.json
+++ b/translations/texts/items/armors/biome/foundry/foundryhardhat/foundryhardhat.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Foundry Hard Hat"
+      "Eng": "Foundry Hard Hat",
+      "Por": "Capacete de Fundição"
     }
   }
 ]
