--- a/translations/texts/items/armors/biome/foundry/foundrylegs/foundrylegs.legs.json
+++ b/translations/texts/items/armors/biome/foundry/foundrylegs/foundrylegs.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Foundry Legs"
+      "Eng": "Foundry Legs",
+      "Por": "Calças de Fundição"
     }
   }
 ]
