Atualização translations/texts/items/armors/biome/foundry/weldershelmet/weldershelmet.head.json

--- a/translations/texts/items/armors/biome/foundry/weldershelmet/weldershelmet.head.json
+++ b/translations/texts/items/armors/biome/foundry/weldershelmet/weldershelmet.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Welder's Helmet"
+      "Eng": "Welder's Helmet",
+      "Por": "Capacete de Soldador"
     }
   }
 ]
