Atualização translations/texts/items/armors/biome/geode/geode/geode.chest.json

--- a/translations/texts/items/armors/biome/geode/geode/geode.chest.json
+++ b/translations/texts/items/armors/biome/geode/geode/geode.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Geode Shirt"
+      "Eng": "Geode Shirt",
+      "Por": "Camisa de Geode"
     }
   }
 ]
