Atualização translations/texts/items/armors/biome/geode/geode/geode.head.json

--- a/translations/texts/items/armors/biome/geode/geode/geode.head.json
+++ b/translations/texts/items/armors/biome/geode/geode/geode.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Geode Mask"
+      "Eng": "Geode Mask",
+      "Por": "Máscara de Geode"
     }
   }
 ]
