--- a/translations/texts/items/armors/biome/geode/geode/geode.legs.json
+++ b/translations/texts/items/armors/biome/geode/geode/geode.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Geode Trousers"
+      "Eng": "Geode Trousers",
+      "Por": "Calças de Geode"
     }
   }
 ]
