Atualização translations/texts/items/armors/biome/giantflowers/butterflywings/butterflywings.back.json

--- a/translations/texts/items/armors/biome/giantflowers/butterflywings/butterflywings.back.json
+++ b/translations/texts/items/armors/biome/giantflowers/butterflywings/butterflywings.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Butterfly Wings"
+      "Eng": "Butterfly Wings",
+      "Por": "Asas de Borboleta"
     }
   }
 ]
