--- a/translations/texts/items/armors/biome/giantflowers/buzzy/buzzy.back.json
+++ b/translations/texts/items/armors/biome/giantflowers/buzzy/buzzy.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Buzzy Wings"
+      "Eng": "Buzzy Wings",
+      "Por": "Asas de Abelha"
     }
   }
 ]
