Atualização translations/texts/items/armors/biome/giantflowers/buzzy/buzzy.chest.json

--- a/translations/texts/items/armors/biome/giantflowers/buzzy/buzzy.chest.json
+++ b/translations/texts/items/armors/biome/giantflowers/buzzy/buzzy.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Buzzy Shirt"
+      "Eng": "Buzzy Shirt",
+      "Por": "Camisa de Abelha"
     }
   }
 ]
