Atualização translations/texts/items/armors/biome/giantflowers/buzzy/buzzy.head.json

--- a/translations/texts/items/armors/biome/giantflowers/buzzy/buzzy.head.json
+++ b/translations/texts/items/armors/biome/giantflowers/buzzy/buzzy.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Buzzy Hat"
+      "Eng": "Buzzy Hat",
+      "Por": "Chapéu de Abelha"
     }
   }
 ]
