Atualização translations/texts/items/armors/biome/giantflowers/buzzy/buzzy.legs.json

--- a/translations/texts/items/armors/biome/giantflowers/buzzy/buzzy.legs.json
+++ b/translations/texts/items/armors/biome/giantflowers/buzzy/buzzy.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Buzzy Trousers"
+      "Eng": "Buzzy Trousers",
+      "Por": "Calças de Abelha"
     }
   }
 ]
