Atualização translations/texts/items/armors/biome/gnomevillage/buildinghat/buildinghat.head.json

--- a/translations/texts/items/armors/biome/gnomevillage/buildinghat/buildinghat.head.json
+++ b/translations/texts/items/armors/biome/gnomevillage/buildinghat/buildinghat.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Building Hat"
+      "Eng": "Building Hat",
+      "Por": "Chapéu de Prédio"
     }
   }
 ]
