Atualização translations/texts/items/armors/biome/ice/cyclopsyeti/cyclopsyeti.chest.json

--- a/translations/texts/items/armors/biome/ice/cyclopsyeti/cyclopsyeti.chest.json
+++ b/translations/texts/items/armors/biome/ice/cyclopsyeti/cyclopsyeti.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cyclops Yeti Shirt"
+      "Eng": "Cyclops Yeti Shirt",
+      "Por": "Camisa de Iéti Ciclope"
     }
   }
 ]
