Atualização translations/texts/items/armors/biome/ice/cyclopsyeti/cyclopsyeti.head.json

--- a/translations/texts/items/armors/biome/ice/cyclopsyeti/cyclopsyeti.head.json
+++ b/translations/texts/items/armors/biome/ice/cyclopsyeti/cyclopsyeti.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cyclops Yeti Mask"
+      "Eng": "Cyclops Yeti Mask",
+      "Por": "Máscara de Iéti Ciclope"
     }
   }
 ]
