Atualização translations/texts/items/armors/biome/ice/cyclopsyeti/cyclopsyeti.legs.json

--- a/translations/texts/items/armors/biome/ice/cyclopsyeti/cyclopsyeti.legs.json
+++ b/translations/texts/items/armors/biome/ice/cyclopsyeti/cyclopsyeti.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cyclops Yeti Trousers"
+      "Eng": "Cyclops Yeti Trousers",
+      "Por": "Calças de Iéti Ciclope"
     }
   }
 ]
