--- a/translations/texts/items/armors/biome/ice/survivalgear/survivalgear.back.json
+++ b/translations/texts/items/armors/biome/ice/survivalgear/survivalgear.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Survival Gear Backpack"
+      "Eng": "Survival Gear Backpack",
+      "Por": "Mochila de Equipamento de Sobrevivência"
     }
   }
 ]
