--- a/translations/texts/items/armors/biome/icecaves/icearmor/icearmor.chest.json
+++ b/translations/texts/items/armors/biome/icecaves/icearmor/icearmor.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ice Armor Shirt"
+      "Eng": "Ice Armor Shirt",
+      "Por": "Camisa de Armadura de Gelo"
     }
   }
 ]
