--- a/translations/texts/items/armors/biome/icecaves/icearmor/icearmor.head.json
+++ b/translations/texts/items/armors/biome/icecaves/icearmor/icearmor.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ice Armor Mask"
+      "Eng": "Ice Armor Mask",
+      "Por": "Máscara de Armadura de Gelo"
     }
   }
 ]
