--- a/translations/texts/items/armors/biome/icecaves/icearmor/icearmor.legs.json
+++ b/translations/texts/items/armors/biome/icecaves/icearmor/icearmor.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ice Armor Trousers"
+      "Eng": "Ice Armor Trousers",
+      "Por": "Calças de Armadura de Gelo"
     }
   }
 ]
