Atualização translations/texts/items/armors/biome/icecaves/icecubehat/icecubehead.head.json

--- a/translations/texts/items/armors/biome/icecaves/icecubehat/icecubehead.head.json
+++ b/translations/texts/items/armors/biome/icecaves/icecubehat/icecubehead.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ice Cube Mask"
+      "Eng": "Ice Cube Mask",
+      "Por": "Máscara de Cubo de Gelo"
     }
   }
 ]
