--- a/translations/texts/items/armors/biome/jungle/tough/headband.head.json
+++ b/translations/texts/items/armors/biome/jungle/tough/headband.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Tough Headband"
+      "Eng": "Tough Headband",
+      "Por": "Faixa Resistente"
     }
   }
 ]
