--- a/translations/texts/items/armors/biome/jungle/tough/tough.chest.json
+++ b/translations/texts/items/armors/biome/jungle/tough/tough.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Tough Chest"
+      "Eng": "Tough Chest",
+      "Por": "Peitoral Resistente"
     }
   }
 ]
