--- a/translations/texts/items/armors/biome/jungle/tough/tough.legs.json
+++ b/translations/texts/items/armors/biome/jungle/tough/tough.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Tough Trousers"
+      "Eng": "Tough Trousers",
+      "Por": "Calças Resistentes"
     }
   }
 ]
