--- a/translations/texts/items/armors/biome/midnight/dark/dark.legs.json
+++ b/translations/texts/items/armors/biome/midnight/dark/dark.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Dark Trousers"
+      "Eng": "Dark Trousers",
+      "Por": "Calças Sombrias"
     }
   }
 ]
