--- a/translations/texts/items/armors/biome/midnight/dark/darkchest.chest.json
+++ b/translations/texts/items/armors/biome/midnight/dark/darkchest.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Dark Shirt"
+      "Eng": "Dark Shirt",
+      "Por": "Camisa Sombria"
     }
   }
 ]
