--- a/translations/texts/items/armors/biome/midnight/darkdisguise/darkdisguise.chest.json
+++ b/translations/texts/items/armors/biome/midnight/darkdisguise/darkdisguise.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Dark Disguise Shirt"
+      "Eng": "Dark Disguise Shirt",
+      "Por": "Camisa de Disfarce Sombrio"
     }
   }
 ]
