Atualização translations/texts/items/armors/biome/midnight/darkdisguise/darkdisguise.head.json

--- a/translations/texts/items/armors/biome/midnight/darkdisguise/darkdisguise.head.json
+++ b/translations/texts/items/armors/biome/midnight/darkdisguise/darkdisguise.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Dark Disguise Mask"
+      "Eng": "Dark Disguise Mask",
+      "Por": "Máscara de Disfarce Sombrio"
     }
   }
 ]
