--- a/translations/texts/items/armors/biome/midnight/darkdisguise/darkdisguise.legs.json
+++ b/translations/texts/items/armors/biome/midnight/darkdisguise/darkdisguise.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Dark Disguise Trousers"
+      "Eng": "Dark Disguise Trousers",
+      "Por": "Calças de Disfarce Sombrio"
     }
   }
 ]
