--- a/translations/texts/items/armors/biome/mushroom/evilmushroom/evilmushroom.head.json
+++ b/translations/texts/items/armors/biome/mushroom/evilmushroom/evilmushroom.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Evil Mushroom Hat"
+      "Eng": "Evil Mushroom Hat",
+      "Por": "Chapéu de Cogumelo Maligno"
     }
   }
 ]
