--- a/translations/texts/items/armors/biome/mushroom/mushroom/mushroom.head.json
+++ b/translations/texts/items/armors/biome/mushroom/mushroom/mushroom.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Mushroom Hat"
+      "Eng": "Mushroom Hat",
+      "Por": "Chapéu de Cogumelo"
     }
   }
 ]
