--- a/translations/texts/items/armors/biome/mushroom/raggedcape/raggedcape.back.json
+++ b/translations/texts/items/armors/biome/mushroom/raggedcape/raggedcape.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ragged Cape"
+      "Eng": "Ragged Cape",
+      "Por": "Capa Esfarrapada"
     }
   }
 ]
