--- a/translations/texts/items/armors/biome/ocean/beachcreeper/beachcreeper.chest.json
+++ b/translations/texts/items/armors/biome/ocean/beachcreeper/beachcreeper.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Creepling Chestpiece"
+      "Eng": "Creepling Chestpiece",
+      "Por": "Peitoral de Creepling"
     }
   }
 ]
