--- a/translations/texts/items/armors/biome/ocean/beachcreeper/beachcreeper.head.json
+++ b/translations/texts/items/armors/biome/ocean/beachcreeper/beachcreeper.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Creepling Mask"
+      "Eng": "Creepling Mask",
+      "Por": "Máscara de Creepling"
     }
   }
 ]
