--- a/translations/texts/items/armors/biome/ocean/beachcreeper/beachcreeper.legs.json
+++ b/translations/texts/items/armors/biome/ocean/beachcreeper/beachcreeper.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Creepling Trousers"
+      "Eng": "Creepling Trousers",
+      "Por": "Calças de Creepling"
     }
   }
 ]
