--- a/translations/texts/items/armors/biome/ocean/deepdiver/deepdiver.head.json
+++ b/translations/texts/items/armors/biome/ocean/deepdiver/deepdiver.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Deep Diver Helmet"
+      "Eng": "Deep Diver Helmet",
+      "Por": "Capacete de Mergulhador Profundo"
     }
   }
 ]
