--- a/translations/texts/items/armors/biome/prism/prism.chest.json
+++ b/translations/texts/items/armors/biome/prism/prism.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Prism Shirt"
+      "Eng": "Prism Shirt",
+      "Por": "Camisa de Prisma"
     }
   }
 ]
