--- a/translations/texts/items/armors/biome/prism/prism.head.json
+++ b/translations/texts/items/armors/biome/prism/prism.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Prism Helmet"
+      "Eng": "Prism Helmet",
+      "Por": "Capacete de Prisma"
     }
   }
 ]
