--- a/translations/texts/items/armors/biome/prism/prism.legs.json
+++ b/translations/texts/items/armors/biome/prism/prism.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Prism Trousers"
+      "Eng": "Prism Trousers",
+      "Por": "Calças de Prisma"
     }
   }
 ]
