--- a/translations/texts/items/armors/biome/scorchedcity/deadbeatbruiserleather/deadbeatbruiserleather.chest.json
+++ b/translations/texts/items/armors/biome/scorchedcity/deadbeatbruiserleather/deadbeatbruiserleather.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Deadbeat Bruiser Jacket"
+      "Eng": "Deadbeat Bruiser Jacket",
+      "Por": "Jaqueta de Caloteiro Brutamontes"
     }
   }
 ]
