Atualização translations/texts/items/armors/biome/scorchedcity/deadbeatbruisermask/deadbeatbruisermask.head.json

--- a/translations/texts/items/armors/biome/scorchedcity/deadbeatbruisermask/deadbeatbruisermask.head.json
+++ b/translations/texts/items/armors/biome/scorchedcity/deadbeatbruisermask/deadbeatbruisermask.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Deadbeat Bruiser Mask"
+      "Eng": "Deadbeat Bruiser Mask",
+      "Por": "Máscara de Caloteiro Brutamontes"
     }
   }
 ]
