Atualização translations/texts/items/armors/biome/scorchedcity/deadbeatbruisernerd/deadbeatbruisernerd.head.json

--- a/translations/texts/items/armors/biome/scorchedcity/deadbeatbruisernerd/deadbeatbruisernerd.head.json
+++ b/translations/texts/items/armors/biome/scorchedcity/deadbeatbruisernerd/deadbeatbruisernerd.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Deadbeat Bruiser Glasses"
+      "Eng": "Deadbeat Bruiser Glasses",
+      "Por": "Óculos de Caloteiro Brutamontes"
     }
   }
 ]
