Atualização translations/texts/items/armors/biome/scorchedcity/deadbeathelm/deadbeathelm.head.json

--- a/translations/texts/items/armors/biome/scorchedcity/deadbeathelm/deadbeathelm.head.json
+++ b/translations/texts/items/armors/biome/scorchedcity/deadbeathelm/deadbeathelm.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Deadbeat Helm"
+      "Eng": "Deadbeat Helm",
+      "Por": "Elmo de Caloteiro"
     }
   }
 ]
