--- a/translations/texts/items/armors/biome/scorchedcity/deadbeathornhelmhead/deadbeathornhelm.head.json
+++ b/translations/texts/items/armors/biome/scorchedcity/deadbeathornhelmhead/deadbeathornhelm.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Deadbeat Horn Helm"
+      "Eng": "Deadbeat Horn Helm",
+      "Por": "Elmo de Chifres de Caloteiro"
     }
   }
 ]
