--- a/translations/texts/items/armors/biome/scorchedcity/deadbeathornmask/deadbeathorns.head.json
+++ b/translations/texts/items/armors/biome/scorchedcity/deadbeathornmask/deadbeathorns.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Deadbeat Horn Mask"
+      "Eng": "Deadbeat Horn Mask",
+      "Por": "Máscara de Chifres de Caloteiro"
     }
   }
 ]
