Atualização translations/texts/items/armors/biome/scorchedcity/deadbeathorns/deadbeathorns.head.json

--- a/translations/texts/items/armors/biome/scorchedcity/deadbeathorns/deadbeathorns.head.json
+++ b/translations/texts/items/armors/biome/scorchedcity/deadbeathorns/deadbeathorns.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Deadbeat Horns"
+      "Eng": "Deadbeat Horns",
+      "Por": "Chifres de Caloteiro"
     }
   }
 ]
