--- a/translations/texts/items/armors/biome/scorchedcity/deadbeatleather/deadbeatleather.chest.json
+++ b/translations/texts/items/armors/biome/scorchedcity/deadbeatleather/deadbeatleather.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Deadbeat Leather Jacket"
+      "Eng": "Deadbeat Leather Jacket",
+      "Por": "Jaqueta de Couro de Caloteiro"
     }
   }
 ]
