Atualização translations/texts/items/armors/biome/scorchedcity/deadbeatleather/deadbeatleather.legs.json

--- a/translations/texts/items/armors/biome/scorchedcity/deadbeatleather/deadbeatleather.legs.json
+++ b/translations/texts/items/armors/biome/scorchedcity/deadbeatleather/deadbeatleather.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Deadbeat Tough Trousers"
+      "Eng": "Deadbeat Tough Trousers",
+      "Por": "Calças Resistentes de Caloteiro"
     }
   }
 ]
