--- a/translations/texts/items/armors/biome/scorchedcity/deadbeatmask/deadbeatmask.head.json
+++ b/translations/texts/items/armors/biome/scorchedcity/deadbeatmask/deadbeatmask.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Deadbeat Mask"
+      "Eng": "Deadbeat Mask",
+      "Por": "Máscara de Caloteiro"
     }
   }
 ]
