--- a/translations/texts/items/armors/biome/scorchedcity/deadbeatnerd/deadbeatnerd.head.json
+++ b/translations/texts/items/armors/biome/scorchedcity/deadbeatnerd/deadbeatnerd.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Deadbeat Nerd Mask"
+      "Eng": "Deadbeat Nerd Mask",
+      "Por": "Máscara Nerd de Caloteiro"
     }
   }
 ]
