Atualização translations/texts/items/armors/biome/scorchedcity/deadbeatscroungerhornmask/deadbeatscroungerhornmask.head.json

--- a/translations/texts/items/armors/biome/scorchedcity/deadbeatscroungerhornmask/deadbeatscroungerhornmask.head.json
+++ b/translations/texts/items/armors/biome/scorchedcity/deadbeatscroungerhornmask/deadbeatscroungerhornmask.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Deadbeat Scrounger Horns"
+      "Eng": "Deadbeat Scrounger Horns",
+      "Por": "Chifres Esfarrapados de Caloteiro"
     }
   }
 ]
