--- a/translations/texts/items/armors/biome/scorchedcity/deadbeatscroungerhorns/deadbeatscroungerhorns.head.json
+++ b/translations/texts/items/armors/biome/scorchedcity/deadbeatscroungerhorns/deadbeatscroungerhorns.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Deadbeat Merchant Horns"
+      "Eng": "Deadbeat Merchant Horns",
+      "Por": "Chifres de Comerciante Caloteiro "
     }
   }
 ]
