Atualização translations/texts/items/armors/biome/scorchedcity/deadbeatscroungerstraps/deadbeatscroungerstraps.chest.json

--- a/translations/texts/items/armors/biome/scorchedcity/deadbeatscroungerstraps/deadbeatscroungerstraps.chest.json
+++ b/translations/texts/items/armors/biome/scorchedcity/deadbeatscroungerstraps/deadbeatscroungerstraps.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Deadbeat Scrounger Straps"
+      "Eng": "Deadbeat Scrounger Straps",
+      "Por": "Cintas de Couro de Catador"
     }
   }
 ]
