--- a/translations/texts/items/armors/biome/scorchedcity/deadbeatscroungerstraps/deadbeatscroungerstraps.legs.json
+++ b/translations/texts/items/armors/biome/scorchedcity/deadbeatscroungerstraps/deadbeatscroungerstraps.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Deadbeat Dirty Trousers"
+      "Eng": "Deadbeat Dirty Trousers",
+      "Por": "Calças Sujas de Caloteiro"
     }
   }
 ]
