--- a/translations/texts/items/armors/biome/scorchedcity/deadbeatspandex/deadbeatspandex.chest.json
+++ b/translations/texts/items/armors/biome/scorchedcity/deadbeatspandex/deadbeatspandex.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Deadbeat Spandex Jacket"
+      "Eng": "Deadbeat Spandex Jacket",
+      "Por": "Jaqueta de Spandex de Caloteiro"
     }
   }
 ]
