--- a/translations/texts/items/armors/biome/scorchedcity/deadbeatspandex/deadbeatspandex.legs.json
+++ b/translations/texts/items/armors/biome/scorchedcity/deadbeatspandex/deadbeatspandex.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Deadbeat Tight Trousers"
+      "Eng": "Deadbeat Tight Trousers",
+      "Por": "Calças Apertadas de Caloteiro"
     }
   }
 ]
