Atualização translations/texts/items/armors/biome/scorchedcity/deadbeatstraps/deadbeatstraps.chest.json

--- a/translations/texts/items/armors/biome/scorchedcity/deadbeatstraps/deadbeatstraps.chest.json
+++ b/translations/texts/items/armors/biome/scorchedcity/deadbeatstraps/deadbeatstraps.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Deadbeat Straps"
+      "Eng": "Deadbeat Straps",
+      "Por": "Cintas de Caloteiro"
     }
   }
 ]
