--- a/translations/texts/items/armors/biome/scorchedcity/deadbeatstraps/deadbeatstraps.legs.json
+++ b/translations/texts/items/armors/biome/scorchedcity/deadbeatstraps/deadbeatstraps.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Deadbeat Straps Trousers"
+      "Eng": "Deadbeat Straps Trousers",
+      "Por": "Calças de Cintas de Caloteiro"
     }
   }
 ]
