--- a/translations/texts/items/armors/biome/scorchedcity/deadbeatthugspandex/deadbeatthugspandex.chest.json
+++ b/translations/texts/items/armors/biome/scorchedcity/deadbeatthugspandex/deadbeatthugspandex.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Deadbeat Thug Jacket"
+      "Eng": "Deadbeat Thug Jacket",
+      "Por": "Jaqueta de Bandido Caloteiro"
     }
   }
 ]
