--- a/translations/texts/items/armors/biome/slime/slime/slime.chest.json
+++ b/translations/texts/items/armors/biome/slime/slime/slime.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Slime Shirt"
+      "Eng": "Slime Shirt",
+      "Por": "Camisa de Lodo"
     }
   }
 ]
