--- a/translations/texts/items/armors/biome/slime/slime/slime.head.json
+++ b/translations/texts/items/armors/biome/slime/slime/slime.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Slime Mask"
+      "Eng": "Slime Mask",
+      "Por": "Máscara de Lodo"
     }
   }
 ]
