--- a/translations/texts/items/armors/biome/slime/slime/slime.legs.json
+++ b/translations/texts/items/armors/biome/slime/slime/slime.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Slime Trousers"
+      "Eng": "Slime Trousers",
+      "Por": "Calças de Lodo"
     }
   }
 ]
