--- a/translations/texts/items/armors/biome/spring/flowery/flowery.back.json
+++ b/translations/texts/items/armors/biome/spring/flowery/flowery.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Flowery Vines"
+      "Eng": "Flowery Vines",
+      "Por": "Vinhas Floridas"
     }
   }
 ]
