--- a/translations/texts/items/armors/biome/spring/flowery/flowery.chest.json
+++ b/translations/texts/items/armors/biome/spring/flowery/flowery.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Flowery Shirt"
+      "Eng": "Flowery Shirt",
+      "Por": "Camisa Florida"
     }
   }
 ]
