--- a/translations/texts/items/armors/biome/spring/flowery/flowery.head.json
+++ b/translations/texts/items/armors/biome/spring/flowery/flowery.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Flowery Mask"
+      "Eng": "Flowery Mask",
+      "Por": "Máscara Florida"
     }
   }
 ]
