Atualização translations/texts/items/armors/biome/spring/flowery/flowery.legs.json

--- a/translations/texts/items/armors/biome/spring/flowery/flowery.legs.json
+++ b/translations/texts/items/armors/biome/spring/flowery/flowery.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Flowery Trousers"
+      "Eng": "Flowery Trousers",
+      "Por": "Calças Floridas"
     }
   }
 ]
