--- a/translations/texts/items/armors/biome/steamspring/neckruffle/neckruffle.chest.json
+++ b/translations/texts/items/armors/biome/steamspring/neckruffle/neckruffle.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Neck Ruffle Jacket"
+      "Eng": "Neck Ruffle Jacket",
+      "Por": "Jaqueta com Babados"
     }
   }
 ]
