--- a/translations/texts/items/armors/biome/steamspring/neckruffle/steamgrey.legs.json
+++ b/translations/texts/items/armors/biome/steamspring/neckruffle/steamgrey.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Warm Grey Trousers"
+      "Eng": "Warm Grey Trousers",
+      "Por": "Calças Cinzas Quentes"
     }
   }
 ]
