--- a/translations/texts/items/armors/biome/swamp/froggmerchant/froggmerchant.legs.json
+++ b/translations/texts/items/armors/biome/swamp/froggmerchant/froggmerchant.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Frogg Merchant Legs"
+      "Eng": "Frogg Merchant Legs",
+      "Por": "Pernas de Sapo Comerciante"
     }
   }
 ]
