--- a/translations/texts/items/armors/biome/swamp/lagoonsuit/lagoon.chest.json
+++ b/translations/texts/items/armors/biome/swamp/lagoonsuit/lagoon.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Lagoon Chestpiece"
+      "Eng": "Lagoon Chestpiece",
+      "Por": "Peitoral da Lagoa\n"
     }
   }
 ]
