--- a/translations/texts/items/armors/biome/swamp/lagoonsuit/lagoon.legs.json
+++ b/translations/texts/items/armors/biome/swamp/lagoonsuit/lagoon.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Lagoon Trousers"
+      "Eng": "Lagoon Trousers",
+      "Por": "Calças da Lagoa"
     }
   }
 ]
