--- a/translations/texts/items/armors/biome/swamp/lagoonsuit/lagoon.head.json
+++ b/translations/texts/items/armors/biome/swamp/lagoonsuit/lagoon.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Lagoon Mask"
+      "Eng": "Lagoon Mask",
+      "Por": "Máscara da Lagoa"
     }
   }
 ]
