Atualização translations/texts/items/armors/biome/swamp/shared_frogg/shared_.chest.json

--- a/translations/texts/items/armors/biome/swamp/shared_frogg/shared_.chest.json
+++ b/translations/texts/items/armors/biome/swamp/shared_frogg/shared_.chest.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Frogg Chest"
+      "Eng": "Frogg Chest",
+      "Por": "Tórax de Sapo"
     }
   }
 ]
