Atualização translations/texts/items/armors/biome/swamp/shared_frogg/shared_frogg.json

--- a/translations/texts/items/armors/biome/swamp/shared_frogg/shared_frogg.json
+++ b/translations/texts/items/armors/biome/swamp/shared_frogg/shared_frogg.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Frogg Head"
+      "Eng": "Frogg Head",
+      "Por": "Cabeça de Sapo"
     }
   }
 ]
