Atualização translations/texts/items/armors/biome/tar/sabertoothhelm/sabertoothhelm.head.json

--- a/translations/texts/items/armors/biome/tar/sabertoothhelm/sabertoothhelm.head.json
+++ b/translations/texts/items/armors/biome/tar/sabertoothhelm/sabertoothhelm.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Sabertooth Helm"
+      "Eng": "Sabertooth Helm",
+      "Por": "Elmo de Dentes-de-Sabre"
     }
   }
 ]
