Atualização translations/texts/items/armors/biome/tar/spearback/spearback.back.json

--- a/translations/texts/items/armors/biome/tar/spearback/spearback.back.json
+++ b/translations/texts/items/armors/biome/tar/spearback/spearback.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Back Spear"
+      "Eng": "Back Spear",
+      "Por": "Lança Decorativa"
     }
   }
 ]
