Atualização translations/texts/items/armors/biome/tar/tar/tar.legs.json

--- a/translations/texts/items/armors/biome/tar/tar/tar.legs.json
+++ b/translations/texts/items/armors/biome/tar/tar/tar.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Tar Trousers"
+      "Eng": "Tar Trousers",
+      "Por": "Calças de Piche"
     }
   }
 ]
