Atualização translations/texts/items/armors/biome/tar/tarblob/tarblob.head.json

--- a/translations/texts/items/armors/biome/tar/tarblob/tarblob.head.json
+++ b/translations/texts/items/armors/biome/tar/tarblob/tarblob.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Thick Tar Mask"
+      "Eng": "Thick Tar Mask",
+      "Por": "Máscara de Piche Grosso"
     }
   }
 ]
