Atualização translations/texts/items/armors/biome/tar/woolly/woolly.back.json

--- a/translations/texts/items/armors/biome/tar/woolly/woolly.back.json
+++ b/translations/texts/items/armors/biome/tar/woolly/woolly.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Prehistoric Fur Tail"
+      "Eng": "Prehistoric Fur Tail",
+      "Por": "Cauda de Lã Pré-histórica"
     }
   }
 ]
