--- a/translations/texts/items/armors/biome/tar/woolly/woolly.chest.json
+++ b/translations/texts/items/armors/biome/tar/woolly/woolly.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Prehistoric Woolly Coat"
+      "Eng": "Prehistoric Woolly Coat",
+      "Por": "Casaco de Lã Pré-histórica"
     }
   }
 ]
