--- a/translations/texts/items/armors/biome/tar/woolly/woolly.legs.json
+++ b/translations/texts/items/armors/biome/tar/woolly/woolly.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Prehistoric Woolly Pants"
+      "Eng": "Prehistoric Woolly Pants",
+      "Por": "Calças de Lã Pré-histórica"
     }
   }
 ]
