Atualização translations/texts/items/armors/biome/toxic/mutant.back.json

--- a/translations/texts/items/armors/biome/toxic/mutant.back.json
+++ b/translations/texts/items/armors/biome/toxic/mutant.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Mutagen Back Pipe"
+      "Eng": "Mutagen Back Pipe",
+      "Por": "Tubo Mutagênico"
     }
   }
 ]
