--- a/translations/texts/items/armors/biome/toxic/mutant.chest.json
+++ b/translations/texts/items/armors/biome/toxic/mutant.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Mutant Chest"
+      "Eng": "Mutant Chest",
+      "Por": "Peitoral Mutante"
     }
   }
 ]
