Atualização translations/texts/items/armors/biome/toxic/mutant.head.json

--- a/translations/texts/items/armors/biome/toxic/mutant.head.json
+++ b/translations/texts/items/armors/biome/toxic/mutant.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Mutant Head"
+      "Eng": "Mutant Head",
+      "Por": "Cabeça Mutante"
     }
   }
 ]
