Atualização translations/texts/items/armors/biome/toxic/mutant.legs.json

--- a/translations/texts/items/armors/biome/toxic/mutant.legs.json
+++ b/translations/texts/items/armors/biome/toxic/mutant.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Mutant Legs"
+      "Eng": "Mutant Legs",
+      "Por": "Pernas Mutantes"
     }
   }
 ]
