--- a/translations/texts/items/armors/biome/volcanic/firelord/firelord.back.json
+++ b/translations/texts/items/armors/biome/volcanic/firelord/firelord.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Fire Lord's Cloak"
+      "Eng": "Fire Lord's Cloak",
+      "Por": "Manto do Senhor do Fogo"
     }
   }
 ]
