--- a/translations/texts/items/armors/biome/volcanic/firelord/firelord.chest.json
+++ b/translations/texts/items/armors/biome/volcanic/firelord/firelord.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Fire Lord's Breastplate"
+      "Eng": "Fire Lord's Breastplate",
+      "Por": "Peitoral do Senhor do Fogo"
     }
   }
 ]
