Atualização translations/texts/items/armors/biome/volcanic/firelord/firelord.head.json

--- a/translations/texts/items/armors/biome/volcanic/firelord/firelord.head.json
+++ b/translations/texts/items/armors/biome/volcanic/firelord/firelord.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Fire Lord's Helm"
+      "Eng": "Fire Lord's Helm",
+      "Por": "Elmo do Senhor do Fogo"
     }
   }
 ]
