--- a/translations/texts/items/armors/biome/volcanic/firelord/firelord.legs.json
+++ b/translations/texts/items/armors/biome/volcanic/firelord/firelord.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Fire Lord's Greaves"
+      "Eng": "Fire Lord's Greaves",
+      "Por": "Grevas do Senhor do Fogo"
     }
   }
 ]
