--- a/translations/texts/items/armors/contest/boxman1/boxmanhat.head.json
+++ b/translations/texts/items/armors/contest/boxman1/boxmanhat.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "The Boxman's Bodacity"
+      "Eng": "The Boxman's Bodacity",
+      "Por": "O Grande Boxeador"
     }
   }
 ]
