--- a/translations/texts/items/armors/contest/carrothat/carrothat.head.json
+++ b/translations/texts/items/armors/contest/carrothat/carrothat.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "The Motivator"
+      "Eng": "The Motivator",
+      "Por": "O Motivador"
     }
   }
 ]
