Atualização translations/texts/items/armors/contest/causticstag/causticstag.head.json

--- a/translations/texts/items/armors/contest/causticstag/causticstag.head.json
+++ b/translations/texts/items/armors/contest/causticstag/causticstag.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Caustic Stag Helmet"
+      "Eng": "Caustic Stag Helmet",
+      "Por": "Capacete de Veado Cáustico"
     }
   }
 ]
