Atualização translations/texts/items/armors/contest/faceleech/faceleech.head.json

--- a/translations/texts/items/armors/contest/faceleech/faceleech.head.json
+++ b/translations/texts/items/armors/contest/faceleech/faceleech.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Benevolent Face Leech"
+      "Eng": "Benevolent Face Leech",
+      "Por": "Sanguessuga Facial Benevolente"
     }
   }
 ]
