--- a/translations/texts/items/armors/contest/pinkeyeparasite/pinkeyeparasite.head.json
+++ b/translations/texts/items/armors/contest/pinkeyeparasite/pinkeyeparasite.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Pink-Eye Parasite"
+      "Eng": "Pink-Eye Parasite",
+      "Por": "Parasita de Conjuntivite"
     }
   }
 ]
