Atualização translations/texts/items/armors/contest/scalpion/scalpion.head.json

--- a/translations/texts/items/armors/contest/scalpion/scalpion.head.json
+++ b/translations/texts/items/armors/contest/scalpion/scalpion.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Iron Scalpion"
+      "Eng": "Iron Scalpion",
+      "Por": "Escorpião de Ferro"
     }
   }
 ]
