--- a/translations/texts/items/armors/contest/sensorysquidhat/sensorysquidhat.head.json
+++ b/translations/texts/items/armors/contest/sensorysquidhat/sensorysquidhat.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Sensory Squid Hat"
+      "Eng": "Sensory Squid Hat",
+      "Por": "Chapéu Sensorial de Lula"
     }
   }
 ]
