--- a/translations/texts/items/armors/contest/steampunk/steampunk.head.json
+++ b/translations/texts/items/armors/contest/steampunk/steampunk.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Steampunk Helmet"
+      "Eng": "Steampunk Helmet",
+      "Por": "Capacete Steampunk"
     }
   }
 ]
