Atualização translations/texts/items/armors/contest/thinkingcap/thinkingcap.head.json

--- a/translations/texts/items/armors/contest/thinkingcap/thinkingcap.head.json
+++ b/translations/texts/items/armors/contest/thinkingcap/thinkingcap.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Thinking Cap"
+      "Eng": "Thinking Cap",
+      "Por": "Chapéu de Pensamento"
     }
   }
 ]
