--- a/translations/texts/items/armors/decorative/clothes/dress1/dress1.chest.json
+++ b/translations/texts/items/armors/decorative/clothes/dress1/dress1.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Blouse and Belt"
+      "Eng": "Blouse and Belt",
+      "Por": "Blusa e Cinto"
     }
   }
 ]
