--- a/translations/texts/items/armors/decorative/clothes/dress1/dress1.legs.json
+++ b/translations/texts/items/armors/decorative/clothes/dress1/dress1.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Pleated Skirt"
+      "Eng": "Pleated Skirt",
+      "Por": "Saia Plissada"
     }
   }
 ]
