--- a/translations/texts/items/armors/decorative/clothes/hoodie/hoodie.chest.json
+++ b/translations/texts/items/armors/decorative/clothes/hoodie/hoodie.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Casual Hoodie"
+      "Eng": "Casual Hoodie",
+      "Por": "Moletom Casual"
     }
   }
 ]
