--- a/translations/texts/items/armors/decorative/clothes/hoodie2/hoodie2.chest.json
+++ b/translations/texts/items/armors/decorative/clothes/hoodie2/hoodie2.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Sleeveless Hoodie"
+      "Eng": "Sleeveless Hoodie",
+      "Por": "Moletom sem Mangas"
     }
   }
 ]
