--- a/translations/texts/items/armors/decorative/clothes/jeans1/jeans1.legs.json
+++ b/translations/texts/items/armors/decorative/clothes/jeans1/jeans1.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Skinny Jeans"
+      "Eng": "Skinny Jeans",
+      "Por": "Jeans Justo"
     }
   }
 ]
