Atualização translations/texts/items/armors/decorative/clothes/jeans2/jeans2.legs.json

--- a/translations/texts/items/armors/decorative/clothes/jeans2/jeans2.legs.json
+++ b/translations/texts/items/armors/decorative/clothes/jeans2/jeans2.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ripped Jeans"
+      "Eng": "Ripped Jeans",
+      "Por": "Jeans Rasgado"
     }
   }
 ]
