--- a/translations/texts/items/armors/decorative/clothes/jeans3/jeans3.legs.json
+++ b/translations/texts/items/armors/decorative/clothes/jeans3/jeans3.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Baggy Jeans"
+      "Eng": "Baggy Jeans",
+      "Por": "Jeans Largos"
     }
   }
 ]
