--- a/translations/texts/items/armors/decorative/clothes/scarf/winterscarf.head.json
+++ b/translations/texts/items/armors/decorative/clothes/scarf/winterscarf.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Winter Scarf"
+      "Eng": "Winter Scarf",
+      "Por": "Cachecol de Inverno"
     }
   }
 ]
