--- a/translations/texts/items/armors/decorative/clothes/tshirt/tshirt.chest.json
+++ b/translations/texts/items/armors/decorative/clothes/tshirt/tshirt.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Plain T-Shirt"
+      "Eng": "Plain T-Shirt",
+      "Por": "Camiseta Lisa"
     }
   }
 ]
