--- a/translations/texts/items/armors/penguin/penguinbandana/penguinbandana.legs.json
+++ b/translations/texts/items/armors/penguin/penguinbandana/penguinbandana.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Penguin Bandana"
+      "Eng": "Penguin Bandana",
+      "Por": "Bandana de Pinguim"
     }
   }
 ]
