--- a/translations/texts/items/armors/penguin/penguinberet/penguinberet.legs.json
+++ b/translations/texts/items/armors/penguin/penguinberet/penguinberet.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Penguin Beret"
+      "Eng": "Penguin Beret",
+      "Por": "Boina de Pinguim"
     }
   }
 ]
