--- a/translations/texts/items/armors/penguin/penguincowboy/penguincowboy.legs.json
+++ b/translations/texts/items/armors/penguin/penguincowboy/penguincowboy.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Penguin Cowboy Hat"
+      "Eng": "Penguin Cowboy Hat",
+      "Por": "Chapéu de Cowboy Pinguim"
     }
   }
 ]
