--- a/translations/texts/items/armors/penguin/penguinglasses/penguinglasses.legs.json
+++ b/translations/texts/items/armors/penguin/penguinglasses/penguinglasses.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Penguin Glasses"
+      "Eng": "Penguin Glasses",
+      "Por": "Óculos de Pinguim"
     }
   }
 ]
