--- a/translations/texts/items/armors/penguin/penguinhelmet/penguinhelmet.legs.json
+++ b/translations/texts/items/armors/penguin/penguinhelmet/penguinhelmet.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Penguin Helmet"
+      "Eng": "Penguin Helmet",
+      "Por": "Capacete de Pinguim"
     }
   }
 ]
