--- a/translations/texts/items/armors/penguin/penguinscanner/penguinscanner.legs.json
+++ b/translations/texts/items/armors/penguin/penguinscanner/penguinscanner.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Penguin Scanner"
+      "Eng": "Penguin Scanner",
+      "Por": "Scanner Pinguim"
     }
   }
 ]
