--- a/translations/texts/items/armors/penguin/penguinvikinghat/penguinvikinghat.legs.json
+++ b/translations/texts/items/armors/penguin/penguinvikinghat/penguinvikinghat.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Penguin Viking Hat"
+      "Eng": "Penguin Viking Hat",
+      "Por": "Chapéu Viking de Pinguim"
     }
   }
 ]
