--- a/translations/texts/items/armors/decorative/costumes/adventurerobot/adventurerobot.chest.json
+++ b/translations/texts/items/armors/decorative/costumes/adventurerobot/adventurerobot.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Adventurer's Breastplate"
+      "Eng": "Adventurer's Breastplate",
+      "Por": "Peitoral do Aventureiro"
     }
   }
 ]
