--- a/translations/texts/items/armors/decorative/costumes/adventurerobot/adventurerobot.head.json
+++ b/translations/texts/items/armors/decorative/costumes/adventurerobot/adventurerobot.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Adventurer's Mask"
+      "Eng": "Adventurer's Mask",
+      "Por": "Máscara do Aventureiro"
     }
   }
 ]
