--- a/translations/texts/items/armors/decorative/costumes/adventurerobot/adventurerobot.legs.json
+++ b/translations/texts/items/armors/decorative/costumes/adventurerobot/adventurerobot.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Adventurer's Greaves"
+      "Eng": "Adventurer's Greaves",
+      "Por": "Grevas do Aventureiro"
     }
   }
 ]
