--- a/translations/texts/items/armors/decorative/costumes/barrel/barrel.head.json
+++ b/translations/texts/items/armors/decorative/costumes/barrel/barrel.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Barrel Lid"
+      "Eng": "Barrel Lid",
+      "Por": "Tampa de Barril"
     }
   }
 ]
