Atualização translations/texts/items/armors/decorative/costumes/betty/betty.chest.json

--- a/translations/texts/items/armors/decorative/costumes/betty/betty.chest.json
+++ b/translations/texts/items/armors/decorative/costumes/betty/betty.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Disguise Chestpiece"
+      "Eng": "Disguise Chestpiece",
+      "Por": "Peitoral de Disfarce"
     }
   }
 ]
