--- a/translations/texts/items/armors/decorative/costumes/betty/betty.head.json
+++ b/translations/texts/items/armors/decorative/costumes/betty/betty.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Disguise Mask"
+      "Eng": "Disguise Mask",
+      "Por": "Máscara de Disfarce"
     }
   }
 ]
