--- a/translations/texts/items/armors/decorative/costumes/betty/betty.legs.json
+++ b/translations/texts/items/armors/decorative/costumes/betty/betty.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Disguise Trousers"
+      "Eng": "Disguise Trousers",
+      "Por": "Calças de Disfarce"
     }
   }
 ]
