Atualização translations/texts/items/armors/decorative/costumes/buccaneer/buccaneer.chest.json

--- a/translations/texts/items/armors/decorative/costumes/buccaneer/buccaneer.chest.json
+++ b/translations/texts/items/armors/decorative/costumes/buccaneer/buccaneer.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Buccaneer Coat"
+      "Eng": "Buccaneer Coat",
+      "Por": "Casaco de Bucaneiro"
     }
   }
 ]
