Atualização translations/texts/items/armors/decorative/costumes/buccaneer/buccaneer.head.json

--- a/translations/texts/items/armors/decorative/costumes/buccaneer/buccaneer.head.json
+++ b/translations/texts/items/armors/decorative/costumes/buccaneer/buccaneer.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Tricorne Hat"
+      "Eng": "Tricorne Hat",
+      "Por": "Chapéu Tricorne"
     }
   }
 ]
