--- a/translations/texts/items/armors/decorative/costumes/buccaneer/buccaneer.legs.json
+++ b/translations/texts/items/armors/decorative/costumes/buccaneer/buccaneer.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Buccaneer Pantaloons"
+      "Eng": "Buccaneer Pantaloons",
+      "Por": "Pantalonas de Bucaneiro"
     }
   }
 ]
