Atualização translations/texts/items/armors/decorative/costumes/cardboard/cardboard.chest.json

--- a/translations/texts/items/armors/decorative/costumes/cardboard/cardboard.chest.json
+++ b/translations/texts/items/armors/decorative/costumes/cardboard/cardboard.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cardboard Box Armor"
+      "Eng": "Cardboard Box Armor",
+      "Por": "Armadura de Caixa de Papelão"
     }
   }
 ]
