Atualização translations/texts/items/armors/decorative/costumes/chef/chef.chest.json

--- a/translations/texts/items/armors/decorative/costumes/chef/chef.chest.json
+++ b/translations/texts/items/armors/decorative/costumes/chef/chef.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Chef Jacket"
+      "Eng": "Chef Jacket",
+      "Por": "Casaco de Chef"
     }
   }
 ]
