--- a/translations/texts/items/armors/decorative/costumes/chef/chef.legs.json
+++ b/translations/texts/items/armors/decorative/costumes/chef/chef.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Chef Apron"
+      "Eng": "Chef Apron",
+      "Por": "Avental de Chefe de Cozinha"
     }
   }
 ]
