--- a/translations/texts/items/armors/decorative/costumes/chef/chef.chest.json
+++ b/translations/texts/items/armors/decorative/costumes/chef/chef.chest.json
@@ -8,7 +8,7 @@
     },
     "Texts": {
       "Eng": "Chef Jacket",
-      "Por": "Casaco de Chef"
+      "Por": "Casaco de Chefe de Cozinha"
     }
   }
 ]
