Atualização translations/texts/items/armors/decorative/costumes/chef/chef.head.json

--- a/translations/texts/items/armors/decorative/costumes/chef/chef.head.json
+++ b/translations/texts/items/armors/decorative/costumes/chef/chef.head.json
@@ -8,7 +8,7 @@
     },
     "Texts": {
       "Eng": "Chef Hat",
-      "Por": "Chapéu de Chef"
+      "Por": "Chapéu de Chefe de Cozinha"
     }
   }
 ]
