Atualização translations/texts/items/armors/decorative/costumes/cowboy/cowboy.chest.json

--- a/translations/texts/items/armors/decorative/costumes/cowboy/cowboy.chest.json
+++ b/translations/texts/items/armors/decorative/costumes/cowboy/cowboy.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cowboy Jacket"
+      "Eng": "Cowboy Jacket",
+      "Por": "Casaco de Cowboy"
     }
   }
 ]
