Atualização translations/texts/items/armors/decorative/costumes/cowboy/cowboy.head.json

--- a/translations/texts/items/armors/decorative/costumes/cowboy/cowboy.head.json
+++ b/translations/texts/items/armors/decorative/costumes/cowboy/cowboy.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cowboy Hat"
+      "Eng": "Cowboy Hat",
+      "Por": "Chapéu de Vaqueiro"
     }
   }
 ]
