Atualização translations/texts/items/armors/decorative/costumes/cowboy/cowboy.legs.json

--- a/translations/texts/items/armors/decorative/costumes/cowboy/cowboy.legs.json
+++ b/translations/texts/items/armors/decorative/costumes/cowboy/cowboy.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cowboy Pants"
+      "Eng": "Cowboy Pants",
+      "Por": "Calças de Vaqueiro"
     }
   }
 ]
