--- a/translations/texts/items/armors/decorative/costumes/cowboy/cowboy.chest.json
+++ b/translations/texts/items/armors/decorative/costumes/cowboy/cowboy.chest.json
@@ -8,7 +8,7 @@
     },
     "Texts": {
       "Eng": "Cowboy Jacket",
-      "Por": "Casaco de Cowboy"
+      "Por": "Casaco de Vaqueiro"
     }
   }
 ]
