Atualização translations/texts/items/armors/decorative/costumes/cupids/cupids.back.json

--- a/translations/texts/items/armors/decorative/costumes/cupids/cupids.back.json
+++ b/translations/texts/items/armors/decorative/costumes/cupids/cupids.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cupid's Wings"
+      "Eng": "Cupid's Wings",
+      "Por": "Asas de Cupido"
     }
   }
 ]
