--- a/translations/texts/items/armors/decorative/costumes/cupids/cupids.chest.json
+++ b/translations/texts/items/armors/decorative/costumes/cupids/cupids.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cupid's Sash"
+      "Eng": "Cupid's Sash",
+      "Por": "Faixa de Cupido"
     }
   }
 ]
