--- a/translations/texts/items/armors/decorative/costumes/cupids/cupids.head.json
+++ b/translations/texts/items/armors/decorative/costumes/cupids/cupids.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Heart Wreath"
+      "Eng": "Heart Wreath",
+      "Por": "Coroa de Coração"
     }
   }
 ]
