--- a/translations/texts/items/armors/decorative/costumes/cupids/cupids.legs.json
+++ b/translations/texts/items/armors/decorative/costumes/cupids/cupids.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cupid's Diaper"
+      "Eng": "Cupid's Diaper",
+      "Por": "Fralda de Cupido"
     }
   }
 ]
