--- a/translations/texts/items/armors/decorative/costumes/executioner/executionerschest.chest.json
+++ b/translations/texts/items/armors/decorative/costumes/executioner/executionerschest.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Executioner's Gloves"
+      "Eng": "Executioner's Gloves",
+      "Por": "Luvas do Carrasco"
     }
   }
 ]
