--- a/translations/texts/items/armors/decorative/costumes/executioner/executionershead.head.json
+++ b/translations/texts/items/armors/decorative/costumes/executioner/executionershead.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Executioner's Mask"
+      "Eng": "Executioner's Mask",
+      "Por": "Máscara do Carrasco"
     }
   }
 ]
