--- a/translations/texts/items/armors/decorative/costumes/fairy/fairy.back.json
+++ b/translations/texts/items/armors/decorative/costumes/fairy/fairy.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Fairy Wings"
+      "Eng": "Fairy Wings",
+      "Por": "Asas de Fada"
     }
   }
 ]
