--- a/translations/texts/items/armors/decorative/costumes/hawaiian/hawaiian.chest.json
+++ b/translations/texts/items/armors/decorative/costumes/hawaiian/hawaiian.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hawaiian Chest"
+      "Eng": "Hawaiian Chest",
+      "Por": "Peitoral Havaiano"
     }
   }
 ]
