--- a/translations/texts/items/armors/decorative/costumes/hawaiian/hawaiian.legs.json
+++ b/translations/texts/items/armors/decorative/costumes/hawaiian/hawaiian.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hawaiian Skirt"
+      "Eng": "Hawaiian Skirt",
+      "Por": "Saia Havaiana"
     }
   }
 ]
