Atualização translations/texts/items/armors/decorative/costumes/hiker/hiker.back.json

--- a/translations/texts/items/armors/decorative/costumes/hiker/hiker.back.json
+++ b/translations/texts/items/armors/decorative/costumes/hiker/hiker.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hiker Backpack"
+      "Eng": "Hiker Backpack",
+      "Por": "Mochila de Andarilho"
     }
   }
 ]
