--- a/translations/texts/items/armors/decorative/costumes/hiker/hiker.chest.json
+++ b/translations/texts/items/armors/decorative/costumes/hiker/hiker.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hiker Jacket"
+      "Eng": "Hiker Jacket",
+      "Por": "Jaqueta de Andarilho"
     }
   }
 ]
