--- a/translations/texts/items/armors/decorative/costumes/hiker/hiker.legs.json
+++ b/translations/texts/items/armors/decorative/costumes/hiker/hiker.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hiker Trousers"
+      "Eng": "Hiker Trousers",
+      "Por": "Calças de Andarilho"
     }
   }
 ]
