--- a/translations/texts/items/armors/decorative/costumes/hotholiday/hotholiday.head.json
+++ b/translations/texts/items/armors/decorative/costumes/hotholiday/hotholiday.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Holiday Hat"
+      "Eng": "Holiday Hat",
+      "Por": "Chapéu Festivo"
     }
   }
 ]
