--- a/translations/texts/items/armors/decorative/costumes/hotholiday/hotholiday.legs.json
+++ b/translations/texts/items/armors/decorative/costumes/hotholiday/hotholiday.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Holiday Skirt"
+      "Eng": "Holiday Skirt",
+      "Por": "Saia Festiva"
     }
   }
 ]
