Atualização translations/texts/items/armors/decorative/costumes/hunter/hunter.back.json

--- a/translations/texts/items/armors/decorative/costumes/hunter/hunter.back.json
+++ b/translations/texts/items/armors/decorative/costumes/hunter/hunter.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hunter's Knife"
+      "Eng": "Hunter's Knife",
+      "Por": "Faca de Caçador"
     }
   }
 ]
