--- a/translations/texts/items/armors/decorative/costumes/hunter/hunter.chest.json
+++ b/translations/texts/items/armors/decorative/costumes/hunter/hunter.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hunter Jacket"
+      "Eng": "Hunter Jacket",
+      "Por": "Jaqueta de Caçador"
     }
   }
 ]
