Atualização translations/texts/items/armors/decorative/costumes/moneybags/moneybags.back.json

--- a/translations/texts/items/armors/decorative/costumes/moneybags/moneybags.back.json
+++ b/translations/texts/items/armors/decorative/costumes/moneybags/moneybags.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Moneybags Sack"
+      "Eng": "Moneybags Sack",
+      "Por": "Saco de Dinheiro"
     }
   }
 ]
