Atualização translations/texts/items/armors/decorative/costumes/moneybags/moneybags.chest.json

--- a/translations/texts/items/armors/decorative/costumes/moneybags/moneybags.chest.json
+++ b/translations/texts/items/armors/decorative/costumes/moneybags/moneybags.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Moneybags Tux"
+      "Eng": "Moneybags Tux",
+      "Por": "Smoking de Ricaço"
     }
   }
 ]
