Atualização translations/texts/items/armors/decorative/costumes/moneybags/moneybags.back.json

--- a/translations/texts/items/armors/decorative/costumes/moneybags/moneybags.back.json
+++ b/translations/texts/items/armors/decorative/costumes/moneybags/moneybags.back.json
@@ -8,7 +8,7 @@
     },
     "Texts": {
       "Eng": "Moneybags Sack",
-      "Por": "Saco de Dinheiro"
+      "Por": "Saco de Ricaço"
     }
   }
 ]
