Atualização translations/texts/items/armors/decorative/costumes/mrclaus/mrclaus.back.json

--- a/translations/texts/items/armors/decorative/costumes/mrclaus/mrclaus.back.json
+++ b/translations/texts/items/armors/decorative/costumes/mrclaus/mrclaus.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Holiday Sack"
+      "Eng": "Holiday Sack",
+      "Por": "Saco Festivo"
     }
   }
 ]
