Atualização translations/texts/items/armors/decorative/costumes/mutantminer/mutantminer.head.json

--- a/translations/texts/items/armors/decorative/costumes/mutantminer/mutantminer.head.json
+++ b/translations/texts/items/armors/decorative/costumes/mutantminer/mutantminer.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Mutant Miner's Helmet"
+      "Eng": "Mutant Miner's Helmet",
+      "Por": "Capacete de Mineiro Mutante"
     }
   }
 ]
