Atualização translations/texts/items/armors/decorative/costumes/pilot/pilot.back.json

--- a/translations/texts/items/armors/decorative/costumes/pilot/pilot.back.json
+++ b/translations/texts/items/armors/decorative/costumes/pilot/pilot.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Pilot's Backpack"
+      "Eng": "Pilot's Backpack",
+      "Por": "Mochila de Piloto"
     }
   }
 ]
