Atualização translations/texts/items/armors/decorative/costumes/pilot/pilot.chest.json

--- a/translations/texts/items/armors/decorative/costumes/pilot/pilot.chest.json
+++ b/translations/texts/items/armors/decorative/costumes/pilot/pilot.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Pilot's Jacket"
+      "Eng": "Pilot's Jacket",
+      "Por": "Jaqueta de Piloto"
     }
   }
 ]
