Atualização translations/texts/items/armors/decorative/costumes/pilot/pilot.head.json

--- a/translations/texts/items/armors/decorative/costumes/pilot/pilot.head.json
+++ b/translations/texts/items/armors/decorative/costumes/pilot/pilot.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Pilot Goggles"
+      "Eng": "Pilot Goggles",
+      "Por": "Óculos de Piloto"
     }
   }
 ]
