Atualização translations/texts/items/armors/decorative/costumes/pilot/pilot.legs.json

--- a/translations/texts/items/armors/decorative/costumes/pilot/pilot.legs.json
+++ b/translations/texts/items/armors/decorative/costumes/pilot/pilot.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Pilot's Trousers"
+      "Eng": "Pilot's Trousers",
+      "Por": "Calças de Piloto"
     }
   }
 ]
