Atualização translations/texts/items/armors/decorative/costumes/pirate/pirate.head.json

--- a/translations/texts/items/armors/decorative/costumes/pirate/pirate.head.json
+++ b/translations/texts/items/armors/decorative/costumes/pirate/pirate.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Pirate Bandana"
+      "Eng": "Pirate Bandana",
+      "Por": "Bandana de Pirata"
     }
   }
 ]
