Atualização translations/texts/items/armors/decorative/costumes/pixelhero/pixelhero.legs.json

--- a/translations/texts/items/armors/decorative/costumes/pixelhero/pixelhero.legs.json
+++ b/translations/texts/items/armors/decorative/costumes/pixelhero/pixelhero.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Pixel Hero Pants"
+      "Eng": "Pixel Hero Pants",
+      "Por": "Calças de Herói Pixel"
     }
   }
 ]
