Atualização translations/texts/items/armors/decorative/costumes/predatory/predatory.chest.json

--- a/translations/texts/items/armors/decorative/costumes/predatory/predatory.chest.json
+++ b/translations/texts/items/armors/decorative/costumes/predatory/predatory.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Predatory Chest"
+      "Eng": "Predatory Chest",
+      "Por": "Peitoral Predatório"
     }
   }
 ]
