Atualização translations/texts/items/armors/decorative/costumes/predatory/predatory.head.json

--- a/translations/texts/items/armors/decorative/costumes/predatory/predatory.head.json
+++ b/translations/texts/items/armors/decorative/costumes/predatory/predatory.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Predatory Head"
+      "Eng": "Predatory Head",
+      "Por": "Cabeça Predatória"
     }
   }
 ]
