Atualização translations/texts/items/armors/decorative/costumes/rainbowood/rainbowwood.head.json

--- a/translations/texts/items/armors/decorative/costumes/rainbowood/rainbowwood.head.json
+++ b/translations/texts/items/armors/decorative/costumes/rainbowood/rainbowwood.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rainbow Wood Helmet"
+      "Eng": "Rainbow Wood Helmet",
+      "Por": "Capacete de Madeira Arco-íris"
     }
   }
 ]
