Atualização translations/texts/items/armors/decorative/costumes/rainbowood/rainbowwood.legs.json

--- a/translations/texts/items/armors/decorative/costumes/rainbowood/rainbowwood.legs.json
+++ b/translations/texts/items/armors/decorative/costumes/rainbowood/rainbowwood.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rainbow Wood Trousers"
+      "Eng": "Rainbow Wood Trousers",
+      "Por": "Calças de Madeira Arco-íris"
     }
   }
 ]
