Atualização translations/texts/items/armors/decorative/costumes/rock/rock.legs.json

--- a/translations/texts/items/armors/decorative/costumes/rock/rock.legs.json
+++ b/translations/texts/items/armors/decorative/costumes/rock/rock.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rock Trousers"
+      "Eng": "Rock Trousers",
+      "Por": "Calças de Pedra"
     }
   }
 ]
