Atualização translations/texts/items/armors/decorative/costumes/scientist/scientist.head.json

--- a/translations/texts/items/armors/decorative/costumes/scientist/scientist.head.json
+++ b/translations/texts/items/armors/decorative/costumes/scientist/scientist.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Scientist Glasses"
+      "Eng": "Scientist Glasses",
+      "Por": "Óculos de Cientista"
     }
   }
 ]
