Atualização translations/texts/items/armors/decorative/costumes/wedding1/wedding1.legs.json

--- a/translations/texts/items/armors/decorative/costumes/wedding1/wedding1.legs.json
+++ b/translations/texts/items/armors/decorative/costumes/wedding1/wedding1.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Elegant Wedding Skirt"
+      "Eng": "Elegant Wedding Skirt",
+      "Por": "Saia de Casamento Elegante"
     }
   }
 ]
