Atualização translations/texts/items/armors/decorative/costumes/wedding2/wedding2.chest.json

--- a/translations/texts/items/armors/decorative/costumes/wedding2/wedding2.chest.json
+++ b/translations/texts/items/armors/decorative/costumes/wedding2/wedding2.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Wedding Dress"
+      "Eng": "Wedding Dress",
+      "Por": "Vestido de Casamento"
     }
   }
 ]
