Atualização translations/texts/items/armors/decorative/costumes/wedding2/wedding2.legs.json

--- a/translations/texts/items/armors/decorative/costumes/wedding2/wedding2.legs.json
+++ b/translations/texts/items/armors/decorative/costumes/wedding2/wedding2.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Wedding Skirt"
+      "Eng": "Wedding Skirt",
+      "Por": "Saia de Noiva"
     }
   }
 ]
