Atualização translations/texts/items/armors/decorative/costumes/wedding1/wedding1.chest.json

--- a/translations/texts/items/armors/decorative/costumes/wedding1/wedding1.chest.json
+++ b/translations/texts/items/armors/decorative/costumes/wedding1/wedding1.chest.json
@@ -8,7 +8,7 @@
     },
     "Texts": {
       "Eng": "Elegant Wedding Top",
-      "Por": "Top de Casamento Elegante"
+      "Por": "Top de Noiva Elegante"
     }
   }
 ]
