Atualização translations/texts/items/armors/decorative/costumes/wedding2/wedding2.chest.json

--- a/translations/texts/items/armors/decorative/costumes/wedding2/wedding2.chest.json
+++ b/translations/texts/items/armors/decorative/costumes/wedding2/wedding2.chest.json
@@ -8,7 +8,7 @@
     },
     "Texts": {
       "Eng": "Wedding Dress",
-      "Por": "Vestido de Casamento"
+      "Por": "Vestido de Noiva"
     }
   }
 ]
