Atualização translations/texts/items/armors/decorative/costumes/wizard/wizard.chest.json

--- a/translations/texts/items/armors/decorative/costumes/wizard/wizard.chest.json
+++ b/translations/texts/items/armors/decorative/costumes/wizard/wizard.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Wizard Robe Top"
+      "Eng": "Wizard Robe Top",
+      "Por": "Túnica de Mago"
     }
   }
 ]
