Atualização translations/texts/items/armors/decorative/costumes/wizard/wizard.chest.json

--- a/translations/texts/items/armors/decorative/costumes/wizard/wizard.chest.json
+++ b/translations/texts/items/armors/decorative/costumes/wizard/wizard.chest.json
@@ -8,7 +8,7 @@
     },
     "Texts": {
       "Eng": "Wizard Robe Top",
-      "Por": "Túnica de Mago"
+      "Por": "Parte Superior da Túnica de Mago"
     }
   }
 ]
