Atualização translations/texts/items/armors/decorative/hats/alienskull/alienskull.head.json

--- a/translations/texts/items/armors/decorative/hats/alienskull/alienskull.head.json
+++ b/translations/texts/items/armors/decorative/hats/alienskull/alienskull.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Alien Skull"
+      "Eng": "Alien Skull",
+      "Por": "Crânio Alienígena"
     }
   }
 ]
