Atualização translations/texts/items/armors/decorative/hats/arenachampion/arenachampion.head.json

--- a/translations/texts/items/armors/decorative/hats/arenachampion/arenachampion.head.json
+++ b/translations/texts/items/armors/decorative/hats/arenachampion/arenachampion.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Arena Champion's Helm"
+      "Eng": "Arena Champion's Helm",
+      "Por": "Elmo do Campeão da Arena"
     }
   }
 ]
