Atualização translations/texts/items/armors/decorative/hats/bandithat1/bandithat1.head.json

--- a/translations/texts/items/armors/decorative/hats/bandithat1/bandithat1.head.json
+++ b/translations/texts/items/armors/decorative/hats/bandithat1/bandithat1.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Bandit's Bandana"
+      "Eng": "Bandit's Bandana",
+      "Por": "Bandana de Bandido"
     }
   }
 ]
