Atualização translations/texts/items/armors/decorative/hats/beret/beret.head.json

--- a/translations/texts/items/armors/decorative/hats/beret/beret.head.json
+++ b/translations/texts/items/armors/decorative/hats/beret/beret.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Sassy Beret"
+      "Eng": "Sassy Beret",
+      "Por": "Boina Ousada "
     }
   }
 ]
